@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - add iseq_run table to link run and flowcell identities with the
+  run folder name
+
 release 6.13.0
  - add tables pac_bio_run_well_metrics and pac_bio_product_metrics 
    to store metrics extracted from PacBio's SMRT Link LIMS
